--- a/index.html
+++ b/index.html
@@ -81,17 +81,17 @@
         <nav class="nav-footer">
             <ul class="footerUl">
                 <li class="item-footer"> <a href="#">Home</a></li>
-                <li class="item-footer">|</li>
+                <li class="item-footer linea">|</li>
                 <li class="item-footer"> <a href="#">Quienes</a></li>
-                <li class="item-footer">|</li>
+                <li class="item-footer linea">|</li>
                 <li class="item-footer"> <a href="#">Servicios</a></li>
-                <li class="item-footer">|</li>
+                <li class="item-footer linea">|</li>
                 <li class="item-footer"> <a href="#">Portfolio</a></li>
-                <li class="item-footer">|</li>
+                <li class="item-footer linea">|</li>
                 <li class="item-footer"> <a href="#">Sucursales</a></li>
-                <li class="item-footer">|</li>
+                <li class="item-footer linea">|</li>
                 <li class="item-footer"> <a href="#">Contacto</a></li>
-                <li class="item-footer">|</li>
+                <li class="item-footer linea">|</li>
             </ul>
         </nav>
 </body>
