--- a/register.html
+++ b/register.html
@@ -28,8 +28,8 @@
          </nav>
     </header>
 
-    <main class="register-form">
-        <h2>REGISTRATE</h2>
+    <main>
+        <h2 class="titulo-register">REGISTRATE</h2>
         <form action="./index.html" method="get">
 
             <div class="contenedor-input">
