trabajando en register.html

--- a/register.html
+++ b/register.html
@@ -34,7 +34,54 @@
 
             <div class="contenedor-input">
                 <label for="miNombre">Nombre</label>
-                <input type="text" name="nombre" id="miNombre">
+                <input type="text" name="nombre" id="miNombre" checked>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miEmail">Email</label>
+                <input type="email" name="email" id="miEmail" checked>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miNombre">Nombre</label>
+                <input type="text" name="nombre" id="miNombre" checked>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miPass">Contraseña</label>
+                <input type="password" name="pass" id="miPass" checked>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miPais">País de nacimiento</label>
+                <select name="pais" id="miPais" checked>
+                    <option value="Ch">Chile</option>
+                    <option value="Arg">Argentina</option>
+                    <option value="Br">Brasil</option>
+                    <option value="Uru">Uruguay</option>
+                    <option value="Par">Paraguay</option>
+                    <option value="Ven">Venezuela</option>
+                </select>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miGenero">Género</label>
+                <input type="radio" name="genero" value="masculino"> <span>Masculino</span>
+                <input type="radio" name="genero" value="femenino"> <span>Femenino</span>
+                <input type="radio" name="genero" value="prefieroNoDecir"> <span>Prefiero no decirlo</span>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miHobbie">Hobbies</label>
+                <input type="checkbox" name="hobbie" value="guitarra"> <span>Guitarra</span>
+                <input type="checkbox" name="hobbie" value="futbol"> <span>Fútbol</span>
+                <input type="checkbox" name="hobbie" value="tenis"> <span>Tenis</span>
+                <input type="checkbox" name="hobbie" value="programacion"> <span>Programación</span>
+            </div>
+
+            <div class="contenedor-input">
+                <label for="miComentario">Déjanos tus comentarios</label>
+
             </div>
 
         </form>
