--- a/register.html
+++ b/register.html
@@ -81,7 +81,18 @@
 
             <div class="contenedor-input">
                 <label for="miComentario">Déjanos tus comentarios</label>
+                <textarea name="comentarios" id="" cols="30" rows="2"></textarea>
+                <input type="checkbox" name="aceptaCondiciones" value="si"> <span>Acepto los términos y condiciones</span>
+            </div>
 
+            <div class="contenedor-input">
+                <input type="button" value="Registrarme">
+                <input type="button" value="Cancelar">
+            </div>
+
+            <div class="contenedor-input">
+                <button type="submit">Registrarme</button>
+                <button type="reset">Cancelar</button>
             </div>
 
         </form>
