--- a/register.html
+++ b/register.html
@@ -30,46 +30,42 @@
 
     <main>
         <h2 class="titulo-register">REGISTRATE</h2>
-        <form action="./index.html" method="get">
+        <section class="form-sec">
+            <form action="./index.html" method="get">
 
-            <div class="contenedor-input">
-                <label for="miNombre">Nombre</label>
-                <input type="text" name="nombre" id="miNombre" checked>
-            </div>
+                <div class="contenedor-input">
+                    <label for="miNombre">Nombre</label>
+                    <input type="text" name="nombre" id="miNombre" checked>
+                </div>
 
-            <div class="contenedor-input">
-                <label for="miEmail">Email</label>
-                <input type="email" name="email" id="miEmail" checked>
-            </div>
+                <div class="contenedor-input">
+                    <label for="miEmail">Email</label>
+                    <input type="email" name="email" id="miEmail" checked>
+                </div>
 
-            <div class="contenedor-input">
-                <label for="miNombre">Nombre</label>
-                <input type="text" name="nombre" id="miNombre" checked>
-            </div>
+                <div class="contenedor-input">
+                    <label for="miPass">Contraseña</label>
+                    <input type="password" name="pass" id="miPass" checked>
+                </div>
 
-            <div class="contenedor-input">
-                <label for="miPass">Contraseña</label>
-                <input type="password" name="pass" id="miPass" checked>
-            </div>
+                <div class="contenedor-input">
+                    <label for="miPais">País de nacimiento</label>
+                    <select name="pais" id="miPais" checked>
+                        <option value="Ch">Chile</option>
+                        <option value="Arg">Argentina</option>
+                        <option value="Br">Brasil</option>
+                        <option value="Uru">Uruguay</option>
+                        <option value="Par">Paraguay</option>
+                        <option value="Ven">Venezuela</option>
+                    </select>
+                </div>
 
-            <div class="contenedor-input">
-                <label for="miPais">País de nacimiento</label>
-                <select name="pais" id="miPais" checked>
-                    <option value="Ch">Chile</option>
-                    <option value="Arg">Argentina</option>
-                    <option value="Br">Brasil</option>
-                    <option value="Uru">Uruguay</option>
-                    <option value="Par">Paraguay</option>
-                    <option value="Ven">Venezuela</option>
-                </select>
-            </div>
-
-            <div class="contenedor-input">
-                <label for="miGenero">Género</label>
-                <input type="radio" name="genero" value="masculino"> <span>Masculino</span>
-                <input type="radio" name="genero" value="femenino"> <span>Femenino</span>
-                <input type="radio" name="genero" value="prefieroNoDecir"> <span>Prefiero no decirlo</span>
-            </div>
+                <div class="contenedor-input">
+                    <label for="miGenero">Género</label>
+                    <input type="radio" name="genero" value="masculino"> <span>Masculino</span>
+                    <input type="radio" name="genero" value="femenino"> <span>Femenino</span>
+                    <input type="radio" name="genero" value="prefieroNoDecir"> <span>Prefiero no decirlo</span>
+                </div>
 
             <div class="contenedor-input">
                 <label for="miHobbie">Hobbies</label>
@@ -79,24 +75,24 @@
                 <input type="checkbox" name="hobbie" value="programacion"> <span>Programación</span>
             </div>
 
-            <div class="contenedor-input">
-                <label for="miComentario">Déjanos tus comentarios</label>
-                <textarea name="comentarios" id="" cols="30" rows="2"></textarea>
-                <input type="checkbox" name="aceptaCondiciones" value="si"> <span>Acepto los términos y condiciones</span>
-            </div>
+                <div class="contenedor-input">
+                    <label for="miComentario">Déjanos tus comentarios</label>
+                    <textarea name="comentarios" id="" cols="30" rows="2"></textarea>
+                    <input type="checkbox" name="aceptaCondiciones" value="si"> <span>Acepto los términos y condiciones</span>
+                </div>
 
-            <div class="contenedor-input">
-                <input type="button" value="Registrarme">
-                <input type="button" value="Cancelar">
-            </div>
+                <div class="contenedor-input">
+                    <input type="button" value="Registrarme">
+                    <input type="button" value="Cancelar">
+                </div>
 
-            <div class="contenedor-input">
-                <button type="submit">Registrarme</button>
-                <button type="reset">Cancelar</button>
-            </div>
+                <div class="contenedor-input">
+                    <button type="submit">Registrarme</button>
+                    <button type="reset">Cancelar</button>
+                </div>
 
-        </form>
-
+            </form>
+        </section>
 
     </main>
 
