--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <header class="header">
         <section class="login">
-            <a href="#">Log-in |</a>
-            <a href="#">Register</a>
+            <a href="./login.html">Log-in |</a>
+            <a href="./register.html">Register</a>
         </section>
         <section>
         <section class="logo">
