--- a/login.html
+++ b/login.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitchening</title>
+    <title>Document</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     <header class="header">
         <section class="login">
-            <a href="./login.html">Log-in |</a>
+            <a href="#">Log-in |</a>
             <a href="#">Register</a>
         </section>
         <section>
@@ -27,72 +27,31 @@
             </ul>
          </nav>
     </header>
+    
+    <main class="login-det">
+        <h2>BIENVENIDO</h2>
+        <section class="form-sec">
+            <form action="index.html">
+                <div class="contenedor-input">
+                    <label for="miEmail">Email</label>
+                    <input type="email" name="email" id="miEmail" checked>
+                </div>
+    
+                <div class="contenedor-input">
+                    <label for="miEmail">Contraseña</label>
+                    <input type="password" name="Contraseña" id="miPass" checked>
+                </div>
 
-    <main>
-        <section class="banner">
-            <img src="./img/img-banner.jpg" alt="banner">
-        </section>
-        <section class="tarjeta-sec">
-            <article class="tarjeta">
-                <img src="./img/img-pdto-1.jpg" alt="">
-                <h3>Lorem ipsum amet</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque odit, amet porro iste excepturi ut repellendus voluptas eveniet voluptatibus atque quos error officiis quaerat ratione aut aliquam facere tempore commodi!</p>
-                <a href="#">Ver más</a>
-            </article>
+                <div class="recordar">
+                    <input type="checkbox" name="recordar" id="" value="Recordarme"> <span>Recordarme</span>
+                </div>
 
-            <article class="tarjeta">
-                <img src="./img/img-pdto-2.jpg" alt="">
-                <h3>Lorem ipsum amet</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque odit, amet porro iste excepturi ut repellendus voluptas eveniet voluptatibus atque quos error officiis quaerat ratione aut aliquam facere tempore commodi!</p>
-                <a href="#">Ver más</a>
-            </article>
+                <div class="button">
+                    <button type="submit">Ingresar</button>
+                </div>
 
-            <article class="tarjeta">
-                <img src="./img/img-pdto-3.jpg" alt="">
-                <h3>Lorem ipsum amet</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque odit, amet porro iste excepturi ut repellendus voluptas eveniet voluptatibus atque quos error officiis quaerat ratione aut aliquam facere tempore commodi!</p>
-                <a href="#">Ver más</a>
-            </article>
-
-            <article class="tarjeta">
-                <img src="./img/img-pdto-1.jpg" alt="">
-                <h3>Lorem ipsum amet</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque odit, amet porro iste excepturi ut repellendus voluptas eveniet voluptatibus atque quos error officiis quaerat ratione aut aliquam facere tempore commodi!</p>
-                <a href="#">Ver más</a>
-            </article>
-
-            <article class="tarjeta">
-                <img src="./img/img-pdto-2.jpg" alt="">
-                <h3>Lorem ipsum amet</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque odit, amet porro iste excepturi ut repellendus voluptas eveniet voluptatibus atque quos error officiis quaerat ratione aut aliquam facere tempore commodi!</p>
-                <a href="#">Ver más</a>
-            </article>
-
-            <article class="tarjeta">
-                <img src="./img/img-pdto-3.jpg" alt="">
-                <h3>Lorem ipsum amet</h3>
-                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque odit, amet porro iste excepturi ut repellendus voluptas eveniet voluptatibus atque quos error officiis quaerat ratione aut aliquam facere tempore commodi!</p>
-                <a href="#">Ver más</a>
-            </article>
+            </form>
         </section>
     </main>
-
-    <footer class="footer">
-        <nav class="nav-footer">
-            <ul class="footerUl">
-                <li class="item-footer"> <a href="#">Home</a></li>
-                <li class="item-footer">|</li>
-                <li class="item-footer"> <a href="#">Quienes</a></li>
-                <li class="item-footer">|</li>
-                <li class="item-footer"> <a href="#">Servicios</a></li>
-                <li class="item-footer">|</li>
-                <li class="item-footer"> <a href="#">Portfolio</a></li>
-                <li class="item-footer">|</li>
-                <li class="item-footer"> <a href="#">Sucursales</a></li>
-                <li class="item-footer">|</li>
-                <li class="item-footer"> <a href="#">Contacto</a></li>
-                <li class="item-footer">|</li>
-            </ul>
-        </nav>
 </body>
 </html>
