--- a/login.html
+++ b/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kitchening</title>
+    <title>Login</title>
     <link rel="stylesheet" href="./CSS/styles.css">
 </head>
 <body>
     <header class="header">
         <section class="login">
             <a href="./login.html">Log-in |</a>
-            <a href="#">Register</a>
+            <a href="./register.html">Register</a>
         </section>
         <section>
         <section class="logo">
