login y register terminados

--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
     </header>
     
     <main class="login-det">
-        <h2>BIENVENIDO</h2>
+        <h2 class="titulo-register">BIENVENIDO</h2>
         <section class="form-sec">
             <form action="index.html">
                 <div class="contenedor-input">
