--- a/register.html
+++ b/register.html
@@ -84,11 +84,11 @@
                     <input type="checkbox" name="aceptaCondiciones" value="si"> <span>Acepto los términos y condiciones</span>
                 </div>
 
-                <div class="contenedor-input">
+                <div class="botones-chicos">
                     <input type="button" value="Registrarme">
                     <input type="button" value="Cancelar">
                 </div>
-
+                
                 <div class="contenedor-opciones">
                     <button type="submit">Registrarme</button>
                     <button type="reset">Cancelar</button>
